--- a/simple-website/log_in.html
+++ b/simple-website/log_in.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>aQaSend</title>
+    <meta name="viewport" content="width=device-width"/>
 	<link rel="icon" href="/favicon.png" />
 	<link rel="stylesheet" href="/index.css" /> 
 </head>
