Nicer file entries

--- a/simple-website/files.html
+++ b/simple-website/files.html
@@ -18,7 +18,7 @@
 		<a class="menuLink" href="/log_in.html">Log in</a>
 	</nav>
 	
-	<main>
+	<main id="fileEntries">
 	</main>
 
 	<script type="module" src="/files.js"></script>
