Polish /api/whoami

--- a/simple-website/files.html
+++ b/simple-website/files.html
@@ -12,10 +12,15 @@
 	<div id="greeting"></div>
 
 	<nav>
+
 		<a class="menuLink" href="/files.html">Files</a>
 		<a class="menuLink" href="/my_files.html">My Files</a>
 		<a class="menuLink" href="/upload.html">Upload</a>
 		<a class="menuLink" href="/log_in.html">Log in</a>
+
+		<div id="userInfo">
+
+		</div>
 	</nav>
 	
 	<main>
