--- a/simple-website/my_files.html
+++ b/simple-website/my_files.html
@@ -9,13 +9,15 @@
 </head>
 
 <body>
-	<div id="greeting"></div>
-
 	<nav>
+		<div id="greeting"></div>
+
 		<a class="menuLink" href="/files.html">Files</a>
 		<a class="menuLink" href="/my_files.html">My Files</a>
 		<a class="menuLink" href="/upload.html">Upload</a>
 		<a class="menuLink" href="/log_in.html">Log in</a>
+
+		<div id="userInfo"></div>
 	</nav>
 
 	<main>
