Prepare account page

--- a/simple-website/account.html
+++ b/simple-website/account.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="utf-8" />
 	<title>aQaSend</title>
-    <meta name="viewport" content="width=device-width"/>
+	<meta name="viewport" content="width=device-width"/>
 	<link rel="icon" href="/favicon.png" />
-	<link rel="stylesheet" href="/index.css" /> 
+	<link rel="stylesheet" href="/index.css" />
 </head>
 
 <body>
@@ -21,9 +21,9 @@
 	</nav>
 
 	<main>
-
+		Nothing there yet
 	</main>
 
-	<script type="module" src="/index.js"></script>
+	<script type="module" src="/account.js"></script>
 </body>
 </html>
