--- a/simple-website/my_files.html
+++ b/simple-website/my_files.html
@@ -17,7 +17,7 @@
 		<a class="menuLink" href="/upload.html">Upload</a>
 		<a class="menuLink" href="/log_in.html">Log in</a>
 
-		<div id="userInfo"></div>
+		<a class="menuLink hidden" href="/account.html" id="userInfo"></a>
 	</nav>
 
 	<main>
