--- a/simple-website/registration.html
+++ b/simple-website/registration.html
@@ -21,16 +21,13 @@
 	</nav>
 
 	<main>
-		<div>
-			<label for="generateCodeBtn">Generate registration link</label>
-			<input type="button" value="Generate" id="generateCodeBtn" />
-		</div>
-		<div id="generatedCodeOutput" class="hidden">
-			<span>Generated registration link: </span>
-			<a id="generatedCodeLink"></a>
-		</div>
+		<form id="loginForm" enctype="application/x-www-form-urlencoded">
+			<input type="text" name="username" placeholder="username" />
+			<input type="password" name="password" placeholder="password" />
+			<input type="submit" value="Register" />
+		</form>
 	</main>
 
-	<script type="module" src="/account.js"></script>
+	<script type="module" src="/registration.js"></script>
 </body>
 </html>
