--- a/simple-website/registration.html
+++ b/simple-website/registration.html
@@ -4,20 +4,20 @@
 	<meta charset="utf-8" />
 	<title>aQaSend</title>
 	<meta name="viewport" content="width=device-width"/>
-	<link rel="icon" href="/favicon.png" />
-	<link rel="stylesheet" href="/index.css" />
+	<link rel="icon" href="favicon.png" />
+	<link rel="stylesheet" href="index.css" />
 </head>
 
 <body>
 	<nav>
-		<div id="greeting"></div>
+		<div id="greeting">Register</div>
 
-		<a class="menuLink" href="/files.html">Files</a>
-		<a class="menuLink" href="/my_files.html">My Files</a>
-		<a class="menuLink" href="/upload.html">Upload</a>
-		<a class="menuLink" href="/log_in.html">Log in</a>
+		<a class="menuLink" href="files.html">Files</a>
+		<a class="menuLink" href="my_files.html">My Files</a>
+		<a class="menuLink" href="upload.html">Upload</a>
+		<a class="menuLink" href="log_in.html">Log in</a>
 
-		<a class="menuLink hidden" href="/account.html" id="userInfo"></a>
+		<a class="menuLink hidden" href="account.html" id="userInfo"></a>
 	</nav>
 
 	<main>
@@ -28,6 +28,6 @@
 		</form>
 	</main>
 
-	<script type="module" src="/registration.js"></script>
+	<script type="module" src="registration.js"></script>
 </body>
 </html>
