--- a/simple-website/my_files.html
+++ b/simple-website/my_files.html
@@ -10,7 +10,7 @@
 
 <body>
 	<nav>
-		<div id="greeting"></div>
+		<div id="greeting">My files</div>
 
 		<a class="menuLink" href="/files.html">Files</a>
 		<a class="menuLink" href="/my_files.html">My Files</a>
