Move InfoMsgBox into its own web component. Upload progress

--- a/simple-website/account.html
+++ b/simple-website/account.html
@@ -21,6 +21,8 @@
 	</nav>
 
 	<main>
+		<info-msg-box id="messageBox"></info-msg-box>
+
 		<div>
 			<label for="generateCodeBtn">Generate registration link</label>
 			<input type="button" value="Generate" id="generateCodeBtn" />
