--- a/simple-website/upload.html
+++ b/simple-website/upload.html
@@ -21,9 +21,7 @@
 	</nav>
 
 	<main>
-		<div id="infoMsg" class="hidden">
-			Sample message
-		</div>
+		<info-msg-box id="uploadResult"></info-msg-box>
 		<form id="uploadForm">
 			<section class="uploadFormSection">
 				<label for="visibility-select">Visibility</label>
