--- a/simple-website/log_in.html
+++ b/simple-website/log_in.html
@@ -21,6 +21,8 @@
 	</nav>
 
 	<main>
+		<info-msg-box id="loginResult"></info-msg-box>
+
 		<form id="loginForm" enctype="application/x-www-form-urlencoded">
 			<input type="text" name="username" placeholder="username" />
 			<input type="password" name="password" placeholder="password" />
