Rewrite password input dialog as a web component

--- a/simple-website/my_files.html
+++ b/simple-website/my_files.html
@@ -24,19 +24,7 @@
 		<div id="fileEntries"></div>
 	</main>
 
-	<dialog id="passwordInput">
-		<form>
-			<p>
-				<label>
-					Password:
-					<input type="password" placeholder="password" />
-				</label>
-			</p>
-			<div>
-				<button type="submit" id="confirmBtn" value="confirm" formmethod="dialog">Download</button>
-				<button type="submit" value="cancel" formmethod="dialog">Cancel</button>
-			</div>
-		</form>
+	<dialog id="passwordInput" is="password-input">
 	</dialog>
 
 	<script type="module" src="/my_files.js"></script>
