Render tabs hidden to avoid flicker

--- a/simple-website/upload.html
+++ b/simple-website/upload.html
@@ -65,7 +65,7 @@
                 <input type="password" id="password" name="password"/>
             </section>
 
-            <div tab="Text upload" id="text-upload">
+            <div tab="Text upload" id="text-upload" class="hidden">
                 <section class="uploadFormSection">
                     <label for="text-filename">File name</label>
                     <input type="text" id="text-filename" name="text-filename"/>
@@ -76,7 +76,7 @@
                 </section>
             </div>
 
-            <section tab="File upload" tab-active class="uploadFormSection"
+            <section tab="File upload" tab-active class="hidden uploadFormSection"
                      id="fileUploadFormSection">
                 <div id="fileUploadContainer">
                     <label for="file" class="fileUploadBox">📂 Select files</label>
